@@ -71,5 +71,5 @@
          "web" : "https://github.com/ytnobody/p5-Net-Azure-Authorization-SAS"
       }
    },
-   "version" : "0.02"
+   "version" : "0.03"
 }
